--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
     <style>
       html {
-        background: url(../images/The_lastdance.jpg) no-repeat fixed
-          center/cover;
+        background: url(./images/The_lastdance.jpg) no-repeat fixed center/cover;
       }
 
       body {
