--- a/hobby.html
+++ b/hobby.html
@@ -66,7 +66,7 @@
       height="auto;"
       border-radius="20px"
       ;
-      src="../images/real.jpg"
+      src="./images/real.jpg"
       alt="축구 게임 및 하기 "
     />
 
